force-app/main/default/objects/DynamicDataViewerConfigurator__c/DynamicDataViewerConfigurator__c.object-meta.xml
<CustomObject>
    <description>Setup object  to help  users  defining objects and fields to be displayed on a page layout</description>
    <label>DynamicDataViewerConfigurator</label>
    <nameField>
        <label>dynamicDataViewerConfigurator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DynamicDataViewerConfigurators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>