force-app/main/default/objects/DynamicDataViewerConfigurator__c/fields/columnList_sourceType__c.field-meta.xml
<CustomField>
    <fullName>columnList_sourceType__c</fullName>
    <description>define where/how to  take the fields from</description>
    <inlineHelpText>Define where/how to  take the fields from</inlineHelpText>
    <label>columnList_sourceType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>RelatedList</fullName>
            </value>
            <value>
                <fullName>FieldSet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>