force-app/main/default/objects/DynamicDataViewerConfigurator__c/fields/DestinationObjectName__c.field-meta.xml
<CustomField>
    <fullName>DestinationObjectName__c</fullName>
    <description>API name of the object  where we want to embed the Data table</description>
    <inlineHelpText>API name of the object  where we want to embed the Data table</inlineHelpText>
    <label>DestinationObjectName</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>