force-app/main/default/objects/DynamicDataViewerConfigurator__c/fields/Field_Label_List__c.field-meta.xml
<CustomField>
    <fullName>Field_Label_List__c</fullName>
    <inlineHelpText>Specify Labels  if  field source Type is &quot;Manual;</inlineHelpText>
    <label>Source Label List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>