force-app/main/default/objects/DynamicDataViewerConfigurator__c/fields/ParentFieldNameOn_Dest__c.field-meta.xml
<CustomField>
    <fullName>ParentFieldNameOn_Dest__c</fullName>
    <description>API name of the parent Field from Destination  Object</description>
    <inlineHelpText>API name of the parent Field from Destination  Object</inlineHelpText>
    <label>ParentFieldNameOn_Dest</label>
    <length>30</length>
    <type>Text</type>
</CustomField>