force-app/main/default/objects/DynamicDataViewerConfigurator__c/fields/ParentFieldNameOn_Source__c.field-meta.xml
<CustomField>
    <fullName>ParentFieldNameOn_Source__c</fullName>
    <description>API Name of the Parent Field on Source object</description>
    <label>ParentFieldNameOn_Source</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>