force-app/main/default/objects/DynamicDataViewerConfigurator__c/fields/SourceColumnList__c.field-meta.xml
<CustomField>
    <fullName>SourceColumnList__c</fullName>
    <description>in case of Manual a comma separated list  of  Fileds
in case of  FieldSet  the Name of the FiledSet
in case of RelatedList  comma separated ObjectName,PageLayout Name and RelatedList Name</description>
    <label>SourceColumnList</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>