force-app/main/default/objects/DynamicDataViewerConfigurator__c/fields/SourceObjectName__c.field-meta.xml
<CustomField>
    <fullName>SourceObjectName__c</fullName>
    <description>API Name of  the Object where we need the data from</description>
    <inlineHelpText>API Name of  the Object where we need the data from</inlineHelpText>
    <label>SourceObjectName</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>